fix: add text wrap

--- a/src/components/filmCardGrid/filmCardGrid.module.scss
+++ b/src/components/filmCardGrid/filmCardGrid.module.scss
@@ -9,7 +9,7 @@
 }
 
 .loadMoreTrigger {
-	height: 10;
+	height: 0;
 	width: 0;
 }
 
